@@ -1,3 +1,8 @@
+2012-11-08  6.8.0-5 Glenn Randers-Pehrson <glennrp@image...>
+  * Added % escape prefixes %[artefact:..] and %[option:..]
+    Including glob search,  EG:  -print "__Options__\n%[option:*]"
+    (backport from IMv7 changes)
+
 2012-11-03  6.8.0-5 Glenn Randers-Pehrson <glennrp@image...>
   * Skip PNG palette-building when it is not needed.
   * Let libpng expand sub-8-bit pixels while reading a PNG file.
